--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welcome To </h1>
             <h1> <span class="name-highlight">Antor</span> Website</h1>
             <h3>World class web developer.hello hello.</h3>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+            <a class="link-button" target="_black" href="https://www.linkedin.com/in/md-mahmud-islam-16b86848/">HIRE ME</a>
         </div>
         <div class="half-width">
             <img src="images/profile1.png" alt="">
